[package]
name = "getting_started"
version = "0.1.0"
edition = "2021"

[dependencies]


[workspace]
members = [ "authentication","login", "login_app", "threads/divide_work", "threads/footgun", "threads/hello_thread", "threads/mutexes", "threads/rwlock", "threads/scoped_thread", "threads/thread_pattern", "variables"]
